FIX: resolve compiler warnings — close URLClassLoader, replace deprecated new URL(String) with URI.create()